--- a/Admin/Pages/Certificates/Delete.cshtml
+++ b/Admin/Pages/Certificates/Delete.cshtml
@@ -9,9 +9,8 @@
 
 <p class="text-danger">@Model.ErrorMessage</p>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Certificate</h4>
+    <h4>Are you sure you want to delete this certificate?</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -29,20 +28,45 @@
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Certificate.DescEng)
         </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Certificate.DescEng)
-        </dd>
+        @if (!string.IsNullOrWhiteSpace(Model.Certificate.DescEng))
+        {
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Certificate.DescEng)
+            </dd>
+        }
+        else
+        {
+            <dd class="col-sm-10 bold">
+                Not provided
+            </dd>
+        }
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Certificate.DescFre)
         </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Certificate.DescFre)
-        </dd>
+        @if (!string.IsNullOrWhiteSpace(Model.Certificate.DescFre))
+        {
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Certificate.DescFre)
+            </dd>
+        }
+        else
+        {
+            <dd class="col-sm-10 bold">
+                Not provided
+            </dd>
+        }
     </dl>
     
     <form method="post">
         <input type="hidden" asp-for="Certificate.Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+
+        <div class="form-group space-btns">
+            <input type="submit" value="Delete" class="btn btn-danger" />
+            <a class="btn btn-secondary" href="/Certificates/Details?id=@Model.Certificate.Id">Cancel</a>
+        </div>
     </form>
+</div>
+
+<div>
+    <a asp-page="./Index">Back to List</a>
 </div>
