--- a/Admin/Pages/Certificates/Descriptions/Create.cshtml
+++ b/Admin/Pages/Certificates/Descriptions/Create.cshtml
@@ -15,16 +15,18 @@
             <input type="hidden" asp-for="Certificate.Id" />
             <div class="form-group">
                 <label asp-for="Certificate.DescEng" class="control-label"></label>
-                <input asp-for="Certificate.DescEng" class="form-control" />
+                <textarea asp-for="Certificate.DescEng" class="form-control" required></textarea>
                 <span asp-validation-for="Certificate.DescEng" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Certificate.DescFre" class="control-label"></label>
-                <input asp-for="Certificate.DescFre" class="form-control" />
+                <textarea asp-for="Certificate.DescFre" class="form-control" required></textarea>
                 <span asp-validation-for="Certificate.DescFre" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+
+             <div class="form-group space-btns medium-margin-top padding-top">
+                <input type="submit" value="Create" class="btn btn-primary" />
+                <a class="btn btn-secondary" href="/Certificates/Descriptions">Cancel</a>
             </div>
         </form>
     </div>
