--- a/Admin/Pages/Certificates/Descriptions/Delete.cshtml
+++ b/Admin/Pages/Certificates/Descriptions/Delete.cshtml
@@ -8,9 +8,8 @@
 
 <p class="text-danger">@Model.ErrorMessage</p>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Certificate</h4>
+    <h4>Are you sure you want to delete this certificate description?</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -29,7 +28,14 @@
 
     <form method="post">
         <input type="hidden" asp-for="Certificate.Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+
+        <div class="form-group space-btns">
+            <input type="submit" value="Delete" class="btn btn-danger" />
+            <a class="btn btn-secondary" href="/Certificates/Descriptions/Details?id=@Model.Certificate.Id">Cancel</a>
+        </div>
     </form>
+</div>
+
+<div>
+    <a asp-page="./Index">Back to List</a>
 </div>
