--- a/Admin/Pages/Certificates/Descriptions/Edit.cshtml
+++ b/Admin/Pages/Certificates/Descriptions/Edit.cshtml
@@ -9,22 +9,24 @@
 <h4>Certificate Description</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-6">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Certificate.Id" />
             <div class="form-group">
                 <label asp-for="Certificate.DescEng" class="control-label"></label>
-                <input asp-for="Certificate.DescEng" class="form-control" />
+                <textarea asp-for="Certificate.DescEng" class="form-control" required></textarea>
                 <span asp-validation-for="Certificate.DescEng" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Certificate.DescFre" class="control-label"></label>
-                <input asp-for="Certificate.DescFre" class="form-control" />
+                <textarea asp-for="Certificate.DescFre" class="form-control" required></textarea>
                 <span asp-validation-for="Certificate.DescFre" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+
+            <div class="form-group space-btns medium-margin-top padding-top">
+                <input type="submit" value="Save Changes" class="btn btn-primary" />
+                <a class="btn btn-secondary" href="/Certificates/Descriptions/Details?id=@Model.Certificate.Id">Cancel</a>
             </div>
         </form>
     </div>
