--- a/Admin/Pages/Certificates/Details.cshtml
+++ b/Admin/Pages/Certificates/Details.cshtml
@@ -26,15 +26,33 @@
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Certificate.DescEng)
         </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Certificate.DescEng)
-        </dd>
+        @if (!string.IsNullOrWhiteSpace(Model.Certificate.DescEng))
+        {
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Certificate.DescEng)
+            </dd>
+        }
+        else
+        {
+            <dd class="col-sm-10 bold">
+                Not provided
+            </dd>
+        }
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Certificate.DescFre)
         </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Certificate.DescFre)
-        </dd>
+        @if (!string.IsNullOrWhiteSpace(Model.Certificate.DescFre))
+        {
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Certificate.DescFre)
+            </dd>
+        }
+        else
+        {
+            <dd class="col-sm-10 bold">
+                Not provided
+            </dd>
+        }
     </dl>
 </div>
 <div>
