--- a/Admin/Pages/Competencies/Delete.cshtml
+++ b/Admin/Pages/Competencies/Delete.cshtml
@@ -8,9 +8,9 @@
 
 <p class="text-danger">@Model.ErrorMessage</p>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Competency</h4>
+    <h4>Are you sure you want to delete this 
+    @Model.Competency.TypeNameEng.Substring(0, Model.Competency.TypeNameEng.IndexOf(" ")).ToLower() competency?</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -41,8 +41,15 @@
 
     <form method="post">
         <input type="hidden" asp-for="Competency.Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="List" asp-route-typeid="@Model.Competency.TypeId">Back to List</a>
+
+        <div class="form-group space-btns">
+            <input type="submit" value="Delete" class="btn btn-danger" />
+            <a class="btn btn-secondary" href="/Competencies/Details?id=@Model.Competency.Id">Cancel</a>
+        </div>
     </form>
+</div>
+
+<div>
+    <a asp-page="List" asp-route-typeid="@Model.Competency.TypeId">Back to List</a>
 </div>
 
