--- a/Admin/Pages/Competencies/Edit.cshtml
+++ b/Admin/Pages/Competencies/Edit.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Edit</h1>
 
-<h4>Competency</h4>
+<h4>@Model.Competency.TypeNameEng.Substring(0, Model.Competency.TypeNameEng.IndexOf(" ")) Competency</h4>
 <hr />
 <div class="row">
     <div class="col-md-12">
@@ -94,8 +94,10 @@
                     <span asp-validation-for="Competency.Level5DescFre" class="text-danger"></span>
                 </div>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+
+            <div class="form-group space-btns padding-top">
+                <input type="submit" value="Save Changes" class="btn btn-primary" />
+                <a class="btn btn-secondary" href="/Competencies/Details?id=@Model.Competency.Id">Cancel</a>
             </div>
         </form>
     </div>
