--- a/Admin/Pages/Index.cshtml
+++ b/Admin/Pages/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Home Page";
 }
 
 
@@ -12,7 +12,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Certificates</h5>
                     <p class="card-text">Click here to create, view or edit certificates or certificate descriptions.</p>
-                    <a href="./Certificates" class="btn btn-primary">Edit</a>
+                    <a href="./Certificates" class="btn btn-primary">View</a>
                 </div>
             </div>
         </div>
@@ -21,7 +21,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Competencies</h5>
                     <p class="card-text">Click here to create, view or edit competencies and competency level definitions.</p>
-                    <a href="./Competencies" class="btn btn-primary">Edit</a>
+                    <a href="./Competencies" class="btn btn-primary">View</a>
                 </div>
             </div>
         </div>
@@ -30,7 +30,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Positions</h5>
                     <p class="card-text">Click here to create, view or edit job positions within the CCG.</p>
-                    <a href="./Positions" class="btn btn-primary">Edit</a>
+                    <a href="./Positions" class="btn btn-primary">View</a>
                 </div>
             </div>
         </div>
@@ -38,8 +38,8 @@
             <div class="card" style="width: 20rem;">
                 <div class="card-body">
                     <h5 class="card-title">Similar Positions</h5>
-                    <p class="card-text">Click here to create similar positions by selecting and editing similar positions for each of the matching scores; 100%, 90%, 80% and 70%.</p>
-                    <a href="./Similar" class="btn btn-primary">Edit</a>
+                    <p class="card-text">Click here to create, view or edit similar positions by selecting and editing similar positions for each of the matching scores: 100%, 90%, 80% and 70%.</p>
+                    <a href="./Similar" class="btn btn-primary">View</a>
                 </div>
             </div>
         </div>
