--- a/Admin/Pages/Positions/Delete.cshtml
+++ b/Admin/Pages/Positions/Delete.cshtml
@@ -8,41 +8,64 @@
 
 <p class="text-danger">@Model.ErrorMessage</p>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>JobPosition</h4>
+    <h4>Are you sure you want to delete this position?</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-3">
-           Title English
+           @Html.DisplayNameFor(model => model.JobPosition.TitleEng)
         </dt>
         <dd class="col-sm-9">
             @Html.DisplayFor(model => model.JobPosition.TitleEng)
         </dd>
         <dt class="col-sm-3">
-            Title French
+            @Html.DisplayNameFor(model => model.JobPosition.TitleFre)
         </dt>
         <dd class="col-sm-9">
             @Html.DisplayFor(model => model.JobPosition.TitleFre)
         </dd>
-    </dl>
-    <dl class="row">
         <dt class="col-sm-3">
-           Position Description English
+           @Html.DisplayNameFor(model => model.JobPosition.PositionDescEng)
         </dt>
-        <dd class="col-sm-9">
-            @Html.DisplayFor(model => model.JobPosition.PositionDescEng)
-        </dd>
+        @if (!string.IsNullOrWhiteSpace(Model.JobPosition.PositionDescEng))
+        {
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.JobPosition.PositionDescEng)
+            </dd>
+        }
+        else
+        {
+            <dd class="col-sm-9 bold">
+                Not provided
+            </dd>
+        }
         <dt class="col-sm-3">
-            Position Description French
+            @Html.DisplayNameFor(model => model.JobPosition.PositionDescFre)
         </dt>
-        <dd class="col-sm-9">
-            @Html.DisplayFor(model => model.JobPosition.PositionDescFre)
-        </dd>
+        @if (!string.IsNullOrWhiteSpace(Model.JobPosition.PositionDescFre))
+        {
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.JobPosition.PositionDescFre)
+            </dd>
+        }
+        else
+        {
+            <dd class="col-sm-9 bold">
+                Not provided
+            </dd>
+        }
     </dl>
+
     <form method="post">
         <input type="hidden" asp-for="JobPosition.Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+
+        <div class="form-group space-btns">
+            <input type="submit" value="Delete" class="btn btn-danger" />
+            <a class="btn btn-secondary" href="/Positions/Details?positionid=@Model.JobPosition.Id">Cancel</a>
+        </div>
     </form>
+</div>
+
+<div>
+    <a asp-page="./Index">Back to List</a>
 </div>
